k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kana-client
  namespace: kana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kana-client
  template:
    metadata:
      labels:
        app: kana-client
    spec:
      containers:
        - name: client
          image: kana-client:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
