k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kana-client
  namespace: kana
spec:
  selector:
    app: kana-client
  ports:
    - port: 80
      targetPort: 80
