k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotoba-server
  namespace: kotoba
spec:
  selector:
    app: kotoba-server
  ports:
    - port: 3001
      targetPort: 3001
